Add a 7digital wrapper and make a minor change due to class not existing in Android.